# magnet-url-rs

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs
