[package]
name = "magnet-url"
version = "1.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
license = "MIT"
description = "A simple, hackable magnet url parser in Rust"
homepage = "https://github.com/billyb2/magnet-url-rs"
repository = "https://github.com/billyb2/magnet-url-rs"
readme = "README.md"
categories = ["parsing", "encoding", "parser-implementations"]
keywords = ["torrent", "magnet", "magnet_url", "parse"]
edition = "2018"

[dependencies]
lazy_static = "1"
regex = "1"
