[package]
name = "magnet-url"
version = "3.0.0"
authors = ["Billy <me@bootlegbilly.dev>"]
license = "MIT"
description = "A simple, efficient magnet url parser in Rust"
homepage = "https://github.com/billyb2/magnet-url-rs"
repository = "https://github.com/billyb2/magnet-url-rs"
readme = "README.md"
categories = ["parsing", "encoding", "parser-implementations"]
keywords = ["torrent", "magnet", "magnet_url", "parse"]
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = {version="0.3", features=["html_reports"]}

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
